<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".KeyboardFragment"
    android:id="@+id/keyboard"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:divider="@drawable/keyboard_divider"
    android:gravity="bottom"
    android:orientation="vertical"
    android:showDividers="beginning|middle|end">

    <TableRow style="@style/keyboard_first_row">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center"
            android:scaleType="centerInside" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/key_clear"
            style="@style/keyboard_button"
            android:text="@string/btn_clear"/>

    </TableRow>

    <TableRow style="@style/keyboard_row">

        <TextView
            android:id="@+id/key_1"
            style="@style/keyboard_number_button"
            android:text="@string/number_one" />

        <TextView
            android:id="@+id/key_2"
            style="@style/keyboard_number_button"
            android:text="@string/number_two" />

        <TextView
            android:id="@+id/key_3"
            style="@style/keyboard_number_button"
            android:text="@string/number_three" />
    </TableRow>

    <TableRow style="@style/keyboard_row">

        <TextView
            android:id="@+id/key_4"
            style="@style/keyboard_number_button"
            android:text="@string/number_four" />

        <TextView
            android:id="@+id/key_5"
            style="@style/keyboard_number_button"
            android:text="@string/number_five" />

        <TextView
            android:id="@+id/key_6"
            style="@style/keyboard_number_button"
            android:text="@string/number_six" />
    </TableRow>

    <TableRow style="@style/keyboard_row">

        <TextView
            android:id="@+id/key_7"
            style="@style/keyboard_number_button"
            android:text="@string/number_seven" />

        <TextView
            android:id="@+id/key_8"
            style="@style/keyboard_number_button"
            android:text="@string/number_eight" />

        <TextView
            android:id="@+id/key_9"
            style="@style/keyboard_number_button"
            android:text="@string/number_nine" />
    </TableRow>

    <TableRow style="@style/keyboard_row">

        <TextView
            android:id="@+id/key_dot"
            style="@style/keyboard_number_button"
            android:text="@string/btn_dot" />

        <TextView
            android:id="@+id/key_0"
            style="@style/keyboard_number_button"
            android:text="@string/number_zero" />

        <TextView
            android:id="@+id/key_done"
            style="@style/keyboard_button"
            android:text="@string/btn_done"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
</TableLayout>
